src/objects/NVM_voicemail__c.object
<CustomObject>
    <description>This object will get filled in when a vendor calls and leaves a voicemail through New Voice Media</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Will fill in the related Account ID to the NVM Voicemail</description>
        <inlineHelpText>Will fill in the related Account ID to the NVM Voicemail</inlineHelpText>
        <label>Account ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSS__c</fullName>
        <description>CBSS User ID filled in by NVM Voicemail</description>
        <inlineHelpText>CBSS User ID filled in by NVM Voicemail</inlineHelpText>
        <label>CBSS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>ID of the Contact related to the NVM Voicemail</description>
        <inlineHelpText>ID of the Contact related to the NVM Voicemail</inlineHelpText>
        <label>Contact ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVM_Guid__c</fullName>
        <description>This is the GUID of the call that came into NVM that created the NVM Voicemail</description>
        <inlineHelpText>This is the GUID of the call that came into NVM that created the NVM Voicemail</inlineHelpText>
        <label>NVM Guid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voicemail__c</fullName>
        <label>voicemail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>NVM voicemail</label>
    <nameField>
        <label>NVM voicemail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NVM voicemails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>